--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -8,18 +8,15 @@
     margin: 0 auto;
 
     &__content {
-        background-color: red;
         border-radius: 50%;
-        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
     }
 
     &__title {
         font-size: 24px;
         font-weight: bold;
-    }
-
-    &__description {
-        font-size: 16px;
-        text-align: center;
     }
 }
